--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -7,30 +7,27 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Log In</legend>
         <div class="form-group">
+          {% set input_class = 'form-control form-control-lg is-invalid' if form.email.errors else 'form-control form-control-lg' %}
           {{ form.email.label(class='form-control-label') }}
-          {{ form.email.label(class='form-control-label') }}
+          {{ form.email(class=input_class) }}
           {% if form.email.errors %}
-            {{ form.email(class='form-control form-control-lg is-invalid') }}
             <div class="invalid-feedback">
               {% for error in form.email.errors %}
                 <span>{{ error }}</span>
               {% endfor %}
             </div>
-          {% else %}
-            {{ form.email(class='form-control form-control-lg') }}
           {% endif %}
         </div>
         <div class="form-group">
+          {% set input_class = 'form-control form-control-lg is-invalid' if form.password.errors else 'form-control form-control-lg' %}
           {{ form.password.label(class='form-control-label') }}
+          {{ form.password(class=input_class) }}
           {% if form.password.errors %}
-            {{ form.password(class='form-control form-control-lg is-invalid') }}
             <div class="invalid-feedback">
               {% for error in form.password.errors %}
                 <span>{{ error }}</span>
               {% endfor %}
             </div>
-          {% else %}
-            {{ form.password(class='form-control form-control-lg') }}
           {% endif %}
         </div>
         <div class="form-check">
