--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -7,9 +7,8 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Log In</legend>
         <div class="form-group">
-          {% set input_class = 'form-control form-control-lg is-invalid' if form.email.errors else 'form-control form-control-lg' %}
           {{ form.email.label(class='form-control-label') }}
-          {{ form.email(class=input_class) }}
+          {{ form.email(class=set_input_class(form.email.errors)) }}
           {% if form.email.errors %}
             <div class="invalid-feedback">
               {% for error in form.email.errors %}
@@ -19,9 +18,8 @@
           {% endif %}
         </div>
         <div class="form-group">
-          {% set input_class = 'form-control form-control-lg is-invalid' if form.password.errors else 'form-control form-control-lg' %}
           {{ form.password.label(class='form-control-label') }}
-          {{ form.password(class=input_class) }}
+          {{ form.password(class=set_input_class(form.password.errors)) }}
           {% if form.password.errors %}
             <div class="invalid-feedback">
               {% for error in form.password.errors %}
